加了几个图标